--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "author": "Karthik Poojari",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.1.1",
     "express": "^4.21.2",
     "mongoose": "^8.10.0",
     "nodemon": "^3.1.9",
